2004-11-19 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp (NP_GetValue):  Handle
	variables NPPVpluginNameString and NPPVpluginDescriptionString.

2004-11-15 Braden McDaniel  <braden@endoframe.com>

	Updated versions of GL detection macros.

	* m4/Makefile.am
	* m4/ax_check_gl.m4
	* m4/ax_check_glu.m4
	* m4/ax_lang_compiler_ms.m4:  Added file.

2004-11-14 Braden McDaniel  <braden@endoframe.com>

	Added member function "halted" to node_traversal; used to check
	whether the traversal has been halted.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp:  Doc-comment improvements.

2004-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.h:  Formatting changes.

2004-11-12 Braden McDaniel  <braden@endoframe.com>

	Converted node implementations to override
	node_class::do_initialize and node_class::do_render.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2004-11-12 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/exposedfield.h:  Call
	event_side_effect from do_process_event (instead of recursively
	calling do_process_event and blowing out the stack).

2004-11-11 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am:  Make documentation directory in
	installdirs-local.

2004-11-11 Braden McDaniel  <braden@endoframe.com>

	Refactored code into different files. Moved field_value
	hierarchy into field_value.h; moved event_listener and
	event_emitter hierarchies into event.h; moved exposedfield
	class template into exposedfield.h.

	* src/libopenvrml/Makefile.am
	* src/libopenvrml/openvrml/ScriptJDK.h
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/event.cpp:  Added file.
	* src/libopenvrml/openvrml/event.h:  Added file.